--- a/NEWS
+++ b/NEWS
@@ -769,6 +769,7 @@ version 1.1.22: (2017-12-15)
 version 1.1.23: (2017-12-18)
 - Minor improvements to documentation 
 
-version 1.1.24: (2017-12-18)
+version 1.1.24: (2017-12-18) - WIP
 - Reduced no of iterations in unit test for quicker testing
 - library `hexbin` added to imports (required for `showFit`)
+- Vignette edits
