--- a/NEWS
+++ b/NEWS
@@ -774,8 +774,14 @@ version 1.1.24: (2017-12-18)
 - library `hexbin` added to imports (required for `showFit`)
 - Vignette edits (simplification of Quick Start)
 
-version 1.1.25: (2017-12-19)
+version 1.1.26: (2017-12-20)
 - Vignette bibliography moved to .bib file
 - Added diagram to summarise different implementations
 - Reduced size of example objects
+- Unit tests updated accordingly
 - `subset` method created for `BASiCS_Chain` objects
+- Removal of parameter `lambda` from `BASiCS_Chain` objects (for storage)
+- R/Methods.R + R/Classes.R updated accordingly
+- `newBASiCS_Chain` updated accordingly. 
+- Code format for `showFit`
+
