--- a/NEWS
+++ b/NEWS
@@ -785,3 +785,8 @@ version 1.1.26: (2017-12-20)
 - `newBASiCS_Chain` updated accordingly. 
 - Code format for `showFit`
 
+version 1.1.27: (2017-12-20)
+- Minor typo resolved in `displayChainBASiCS` method
+- Reduced size of example objects 
+- Unit tests updated accordingly
+- In `BASiCS_TestDE` function: `PsiE` argument renamed as `EpsilonR`
