--- a/NEWS
+++ b/NEWS
@@ -790,3 +790,10 @@ version 1.1.27: (2017-12-20)
 - Reduced size of example objects 
 - Unit tests updated accordingly
 - In `BASiCS_TestDE` function: `PsiE` argument renamed as `EpsilonR`
+
+version 1.1.28: (2017-12-20)
+- Vignette header as in BiocStyle
+- In `BASiCS_TestDE` function: `ProbThresholdE` argument renamed as `ProbThresholdR`
+- In `BASiCS_TestDE` function: `ProbThresholdE` argument renamed as `ProbThresholdR`
+- Updated documentation for example `BASiCS_Chain` objects
+- Minor additional changes to the documentation
