--- a/NEWS
+++ b/NEWS
@@ -800,3 +800,6 @@ version 1.1.28: (2017-12-20)
 
 version 1.1.29: (2017-12-21)
 - `showFit` generic renamed as `BASiCS_showFit` (to avoids potential conflicts)
+
+version 1.1.30: (2018-01-22)
+- Commit to triger a new built
