--- a/NEWS
+++ b/NEWS
@@ -819,3 +819,10 @@ version 1.1.33: (2018-01-30)
 - In `HiddenBASiCS_MCMC_Start`, `positive = TRUE` added to 
 `scran::computeSumFactors` when estimated size factor contain invalid values.
 Thanks to Mike Morgan for suggesting this solution.
+
+version 1.1.34: (2018-01-31)
+- `HiddenBASiCS_MCMC_Start` edited to account for new default
+parameter values in `scran::computeSumFactors` call
+- Unit tests updated accordingly
+- Imports/Suggests packages are now in alphabetic order
+- Minor style changes suggested by BiocCheck
