--- a/vignettes/BASiCS.Rmd
+++ b/vignettes/BASiCS.Rmd
@@ -618,7 +618,8 @@ We also acknowledge feedback and contributions from (Github aliases provided
 within parenthesis): Ben Dulken (bdulken), Chang Xu (xuchang116), 
 Danilo Horta (Horta), Dmitriy Zhukov (dvzhukov), 
 Jens Preu&szlig;ner (jenzopr), Joanna Dreux (Joannacodes), 
-Kevin Rue-Albrecht (kevinrue), Luke Zappia (lazappi), Simon Anders (s-andrews), 
+Kevin Rue-Albrecht (kevinrue), Luke Zappia (lazappi), Nitesh Turaga (nturaga),
+Mike Morgan (MikeDMorgan), Muad Abd El Hay (Cumol), Simon Anders (s-andrews), 
 Yongchao Ge and Yuan Cao (yuancao90), among others. 
 
 This work has been funded by the MRC Biostatistics Unit (MRC grant no. 
