--- a/NEWS
+++ b/NEWS
@@ -835,3 +835,8 @@ version 1.1.36: (2018-03-18)
 - Fixed bug in `newBASiCS_Data` to define a default value for `Tech` when
 spike-ins are not available. Thanks to Muad Abd El Hay (@Cumol) for pointing 
 out this issue.
+
+version 1.1.37: (2018-03-20)
+- `phi` removed from the output of `BASiCS_MCMC` for no-spikes case
+- Unit tests updated accordingly
+- Checks for parameter names added to unit tests
