--- a/NEWS
+++ b/NEWS
@@ -855,3 +855,8 @@ version 1.1.39: (2018-03-20)
 version 1.1.40: (2018-03-20)
 - Fixes small bug in `BASiCS_DenoisedRates`, no-spikes case
 - Adds denoised rates/counts check to unit tests for no-spikes case
+
+version 1.1.41: (2018-03-20)
+- `BASiCS_MCMC`: Default value for `WithSpikes` set as FALSE when there are
+no spike-ins in available in the data
+
