--- a/NEWS
+++ b/NEWS
@@ -866,3 +866,11 @@ version 1.1.42: (2018-03-20)
 - Associated unit test updated accordingly
 - Missing denoised rates/counts check added to unit tests for no-spikes case
 - CITATION file has been added
+
+version 1.1.43: (2018-03-20)
+- Batch information moved to `colData` instead of `metadata` when building a 
+`SingleCellExperiment` object via the `newBASiCS_Data` function. 
+This facilitates data subsetting. 
+- `BASiCS_MCMC` and `HiddenBASiCS_MCMC_InputCheck` updated accordingly
+- `SummarizedExperiment::colData` and `S4Vectors::DataFrame` added as
+imports in NAMESPACE
