Updated NEWS and DESCRIPTION file

--- a/NEWS
+++ b/NEWS
@@ -883,4 +883,9 @@ version 1.1.44: (2018-03-21)
 `BASiCS_DenoisedCounts` and `BASiCS_DenoisedRates`
 
 version 1.1.45: (2018-03-21)
-- Messages within C++ code moved to functions 
+- Messages within C++ code moved to functions
+
+version 1.1.46: (2018-03-21)
+- Split C++ code into individual functions
+- One file per main function and individual files for utility function
+- Created header files for main functions and utility functions 
