--- a/NEWS
+++ b/NEWS
@@ -889,3 +889,8 @@ version 1.1.46: (2018-03-21)
 - Split C++ code into individual functions
 - One file per main function and individual files for utility function
 - Created header files for main functions and utility functions 
+
+version 1.1.47: (2018-03-21)
+- Reduced number of genes in data examples 
+- Unit test updated accordingly
+- Nils added as maintainer in DESCRIPTION
