--- a/NEWS
+++ b/NEWS
@@ -898,3 +898,6 @@ version 1.1.47: (2018-03-21)
 version 1.1.48: (2018-03-22)
 - Excluded epsilon object and RefFreq object from validity test 
 in Chain Class
+
+version 1.1.49: (2018-03-22)
+- Fixed link to `BASiCS_Chain` documentation in `BASiCS_showFit` doc
