--- a/NEWS
+++ b/NEWS
@@ -901,3 +901,6 @@ in Chain Class
 
 version 1.1.49: (2018-03-22)
 - Fixed link to `BASiCS_Chain` documentation in `BASiCS_showFit` doc
+
+version 1.1.50: (2018-03-26)
+- Removed OffSet correction for phi in the BASiCS_TestDE function
